# AOC-2023

./: README.md
day0/: .gitignore  CMakeLists.txt  input.cc  input.hpp  vcpkg.json
day0/benchmark/: CMakeLists.txt  benchmark.cpp
day0/part1/: CMakeLists.txt  SolutionPart1.cc  SolutionPart1.cpp  inputPart1.hpp  main.cpp
day0/part2/: CMakeLists.txt  SolutionPart2.cc  main.cpp
day0/test/: CMakeLists.txt  test.cpp
day1/: CMakeLists.txt  input.hpp
day1/benchmark/: benchmark.cpp
day1/part1/: CMakeLists.txt  SolutionPart1.cpp  SolutionPart1.hpp  inputPart1.hpp  main.cpp
day1/part2/: CMakeLists.txt  SolutionPart2.cpp  SolutionPart2.hpp  inputPart2.hpp  main.cpp
day1/test/: test.cpp
day2/: .gitignore  input.hpp
day2/benchmark/: CMakeLists.txt
day2/part1/: Game.hpp  SolutionPart1.cpp  SolutionPart1.hpp
day2/part2/: SolutionPart2.cpp
day3/: input.hpp
day3/part1/: SolutionPart1.cpp  SolutionPart1.hpp
day3/part2/: SolutionPart2.cpp
day3/test/: test.cpp
